style.css
:root{
    --primary-color: #6404FD;
    --text-primary: #140033;
    --stroke-color: #6400fb30;
    --text-secondary: #7D738C;
    --cards-background: #6304fd06;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    letter-spacing: -1px;
    text-align: center;
}

.main{
    max-width: 1280px;
    width: 100%;
    height: 100%;
    padding:  2rem 5%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.nav-bar {
    width: 600px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
    background-color: rgb(255, 255, 255);
    padding: 1rem 2rem;
    border-radius: 50px;
    border: 1px solid var(--stroke-color);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}

.nav-bar h1 {
    font-size: 1.5rem;
    font-family: 'DM Sans', sans-serif;
    color: var(--primary-color);
}

nav {
    display: flex;
    gap: 2rem;
}

nav a{
    font-size: 1rem;
    font-family: 'DM Sans', sans-serif;
    color: var(--text-primary);
    text-decoration: none;
}

#hamburger{
    display: none;
}

.hero{
    margin-top: 3rem;
}

.hero h2{
    font-size: 3rem;
    color: var(--text-primary);
    font-family: 'DM Sans', sans-serif;
    margin-bottom: .75rem;
}

.hero p{
    font-size: 1rem;
    color: var(--text-secondary);
    font-family: 'Poppins', sans-serif;
    margin-bottom: 2rem;
    letter-spacing: -.5px;
}

.input-section{
    max-width: 600px;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* background-color: red; */
    margin-left: auto;
    margin-right: auto;
}

#job-description{
    width: 100%;
    height: 300px;
    border-radius: 10px;
    border: 1px solid var(--stroke-color);
    padding: 1rem;
    font-size: 1rem;
    font-family: 'Poppins', sans-serif;
    color: var(--text-primary);
    resize: none;
    margin-bottom: 1rem;
    outline: none;
}

.upload-file{
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0.625rem;
    border-radius: 50px;
    border: 1px solid var(--stroke-color);
    padding-left: 1.5rem;
    margin-bottom: 1.5rem;
}

.upload-file h4{
    font-size: 1rem;
    color: var(--text-primary);
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
}

.upload-file button{
    padding: 0.625rem 1.25rem;
    border-radius: 50px;
    outline: none;
    border: 0;
    cursor: pointer;
    font-size: 0.875rem;
    font-family: 'DM Sans', sans-serif;
}

#analyze-btn{
    background-color: var(--primary-color);
    color: white;
    font-weight: 700;
    padding: 0.75rem 1.375rem;
    border-radius: 50px;
    border: 0;
    font-family: 'DM Sans', sans-serif;
    cursor: pointer;
    box-shadow: 0px 4px 6px #6304fd4f;
    font-size: 1rem;
}

.how-it-works{
    margin-top: 6rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.how-it-works h3{
    font-size: 2rem;
    color: var(--text-primary);
    font-family: 'DM Sans', sans-serif;
    margin-bottom: 1rem;
}

.how-it-works p{
    font-size: 1rem;
    color: var(--text-secondary);
    font-family: 'Poppins', sans-serif;
    margin-bottom: 2rem;
    letter-spacing: -.5px;
}

.steps{
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    margin-top: 2rem;
    gap: 1.25rem;
    margin-bottom: 3rem;
}   

.step{
    flex: 1;
    padding: 1.5rem;
    text-align: left;
    background-color: var(--cards-background);
    border-radius: 0.625rem;
    border: 1px solid var(--stroke-color);
}

.step h4{
    font-size: 1.125rem;
    color: var(--text-primary);
    font-family: 'DM Sans', sans-serif;
    margin-bottom: 1rem;
}

.step p{
    font-size: 1rem;
    color: var(--text-secondary);
    font-family: 'Poppins', sans-serif;
    line-height: 1.5;
    margin-bottom: 0;
}

.footer{
    width: 100%;
    margin-top: 6rem;
    display: flex;
    justify-content: space-between;
    text-align: left;
    align-items: center;
    padding: 1.5rem 0;
}

.footer .left h2{
    font-family: 'DM Sans', sans-serif;
    font-size: 1rem;
    color: var(--text-primary);
}

.footer .left p{
    font-family: 'Poppins', sans-serif;
    font-size: 0.875rem;
    color: var(--text-secondary);
    margin-top: 0.5rem;
}

.footer .right .container{
    width: max-content;
    display: flex;
    align-items: center;
    gap: 1.5rem;
    padding: 10px 12px 10px 22px;
    border: 1px solid var(--stroke-color);
    border-radius: 50px;
}

.footer .right .container h4{
    font-family: 'DM Sans', sans-serif;
    font-size: 1rem;
    color: var(--text-primary);
    font-weight: 700;
}

@media (max-width: 768px) {
  /* Styles for mobile screens (≤640px wide) */

    .nav-bar {
        width: 100%;
    }  

    nav{
        display: none;
    }

    #hamburger{
        display: block;
        cursor: pointer;
        font-size: 1.5rem;
        color: var(--text-primary);
        font-weight: 700;
    }

  .steps {
    flex-direction: column;
  }
}

